<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/user_title"></include>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey">
    </View>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="120dp"
       android:orientation="horizontal"
       android:gravity="center">
       <ImageView
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:layout_marginLeft="18dp"
           android:src="@drawable/photo1"/>
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="嘻嘻嘻"
                   android:textSize="20sp"
                   android:padding="10dp"/>
               <TextView
                   android:padding="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="简介:就是一个特点：帅@！"/>
           </LinearLayout>
       </LinearLayout>
   </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#662f4f4f">
    </View>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="#662f4f4f">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:id="@+id/user_monitoring_detail"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/user_list_picture"
            android:layout_height="@dimen/user_list_picture"
            android:src="@mipmap/information"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_picture_marginLeft"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailed_information"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_text_marginLeft"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_into_marginLeft"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/relater__picture"
            android:layout_height="@dimen/user_list_picture"
            android:src="@mipmap/related_tome"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_picture_ml"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related_to_me"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="27dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_into_marginLeft"/>/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/user_list_picture"
            android:layout_height="wrap_content"
            android:src="@mipmap/resources"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_picture_marginLeft"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_resources"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_text_marginLeft"/>/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_into_marginLeft"/>/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_monitoring_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/relater__picture"
            android:layout_height="@dimen/user_list_picture"
            android:src="@mipmap/history"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_picture_ml"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="27dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_into_marginLeft"/>/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp">
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#662f4f4f">
    </View>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="#662f4f4f">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/feedback"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_picture_ml"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_text_ml"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="218dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/about__app"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_APP"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_text_marginLeft"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="189dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_list_height"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tools"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_picture_ml"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up"
            android:textSize="@dimen/user__list_text"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/user_text_ml"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/come_into"
            android:layout_gravity="center"
            android:layout_marginLeft="217dp"/>/>

    </LinearLayout>

</LinearLayout>
